--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://modern-ecommerce-server.vercel.app
+# VITE_API_URL=https://modern-ecommerce-server.vercel.app
+VITE_API_URL=http://localhost:4242/api/auth/
